# LBM-Permeability

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: permeability_curve.py  run_2d.py  run_3d.py  visualize.py  visualize_3d.py
lbm_permeability/: __init__.py  d2q9.py  d3q19.py  d3q19_fast.py  geometry.py  units.py
tests/: test_poiseuille.py
validation/: cylinder_array.py
